--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^16.1.1",
     "next-auth": "^4.24.0",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
